# src/pages/api/v1/middleware.ts
@@ -23,9 +23,28 @@ type OptionalFields = {
   requestSize?: number;
   responseSize?: number;
   userAgent?: string;
+  cpuUsage?: number;
+  memoryUsage?: number;
+  memoryTotal?: number;
 };
 
 type PostBody = RequiredFields & OptionalFields;
+
+const limitValue = (
+  value: number | undefined,
+  { min, max }: { min?: number; max?: number },
+): number | undefined => {
+  if (value === undefined) {
+    return undefined;
+  }
+  if (min !== undefined) {
+    value = Math.max(value, min);
+  }
+  if (max !== undefined) {
+    value = Math.min(value, max);
+  }
+  return value;
+};
 
 const handlePost: ApiHandler = async (req, res) => {
   const apiKey = req.headers['x-api-key'];
@@ -69,6 +88,9 @@ const handlePost: ApiHandler = async (req, res) => {
     requestSize: _requestSize,
     responseSize,
     userAgent: rawUserAgent,
+    cpuUsage,
+    memoryUsage,
+    memoryTotal,
   } = req.body as PostBody;
 
   const requestSize =
@@ -110,6 +132,9 @@ const handlePost: ApiHandler = async (req, res) => {
         browser,
         os,
         device,
+        cpuUsage: limitValue(cpuUsage, { min: 0, max: 1 }),
+        memoryUsage: limitValue(memoryUsage, { min: 0 }),
+        memoryTotal: limitValue(memoryTotal, { min: 0 }),
         apilyticsVersion,
       },
     });
